--- a/al/aarch64/standard/3.0/runtimes.yml
+++ b/al/aarch64/standard/3.0/runtimes.yml
@@ -3,6 +3,24 @@ version: 0.1
 runtimes:
   java:
     versions:
+      corretto25:
+        commands:
+          - echo "Installing corretto(OpenJDK) version 25 ..."
+          - export JAVA_HOME="$JAVA_25_HOME"
+          - export JRE_HOME="$JRE_25_HOME"
+          - export JDK_HOME="$JDK_25_HOME"
+          - |-
+            for tool_path in "$JAVA_HOME"/bin/*;
+             do tool=`basename "$tool_path"`;
+              if [ $tool != 'java-rmi.cgi' ];
+              then
+               rm -f /usr/bin/$tool /var/lib/alternatives/$tool \
+                && update-alternatives --install /usr/bin/$tool $tool $tool_path 20000;
+              fi;
+            done
+          - export GRADLE_VERSION=$GRADLE_921_VERSION
+          - unlink /usr/bin/gradle
+          - ln -s /usr/local/gradle-$GRADLE_921_VERSION/bin/gradle /usr/bin/gradle
       corretto21:
         commands:
           - echo "Installing corretto(OpenJDK) version 21 ..."
@@ -107,6 +125,10 @@ runtimes:
           - goenv global $VERSION
   python:
     versions:
+      3.14:
+        commands:
+          - echo "Installing Python version 3.14 ..."
+          - pyenv global $PYTHON_314_VERSION
       3.13:
         commands:
           - echo "Installing Python version 3.13 ..."
@@ -134,6 +156,14 @@ runtimes:
           - pyenv global $VERSION
   php:
     versions:
+      8.5:
+        commands:
+          - echo "Installing PHP version 8.5 ..."
+          - phpenv global $PHP_85_VERSION
+      8.4:
+        commands:
+          - echo "Installing PHP version 8.4 ..."
+          - phpenv global $PHP_84_VERSION
       8.3:
         commands:
           - echo "Installing PHP version 8.3 ..."
@@ -176,6 +206,10 @@ runtimes:
           - rbenv global $VERSION
   nodejs:
     versions:
+      24:
+        commands:
+          - echo "Installing Node.js version 24 ..."
+          - n $NODE_24_VERSION
       22:
         commands:
           - echo "Installing Node.js version 22 ..."
@@ -199,16 +233,20 @@ runtimes:
           - echo "Specifying docker version in buildspec is deprecated. Using docker $DOCKER_VERSION"
   dotnet:
     versions:
+      10.0:
+        commands:
+          - echo "Installing .NET version 10.0 ..."
+          - dotnet new globaljson --sdk-version $DOTNET_10_GLOBAL_JSON_SDK_VERSION --roll-forward latestFeature --output ..
       8.0:
         commands:
           - echo "Installing .NET version 8.0 ..."
-          - test -f "global.json" && echo "Using provided global.json" || dotnet new globaljson --sdk-version $DOTNET_8_GLOBAL_JSON_SDK_VERSION --roll-forward feature
+          - dotnet new globaljson --sdk-version $DOTNET_8_GLOBAL_JSON_SDK_VERSION --roll-forward latestFeature --output ..
       6.0:
         commands:
           - echo "Installing .NET version 6.0 ..."
-          - test -f "global.json" && echo "Using provided global.json" || dotnet new globaljson --sdk-version $DOTNET_6_GLOBAL_JSON_SDK_VERSION --roll-forward feature
+          - dotnet new globaljson --sdk-version $DOTNET_6_GLOBAL_JSON_SDK_VERSION --roll-forward latestFeature --output ..
       default:
         commands:
           - echo "Installing custom .Net version $VERSION ..."
           - /usr/local/bin/dotnet-install.sh -v $VERSION && rm -rf /tmp/*
-          - test -f "global.json" && echo "Using provided global.json" || dotnet new globaljson --sdk-version $VERSION --roll-forward feature
+          - dotnet new globaljson --sdk-version $VERSION --roll-forward latestFeature --output ..
